Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
None
-
Unexpected results
-
Q3/2026 Server Maintenance, Q3/2026 Server Development
Description
sequence.simple fails on replay
explain select * from seq_15_to_1_step_12345; |
-id select_type table type possible_keys key key_len ref rows Extra |
-1 SIMPLE seq_15_to_1_step_12345 ALL NULL NULL NULL NULL 1 |
+ReplayTest: Query error: CREATE TABLE `seq_15_to_1_step_12345` ( |
+ `seq` bigint(20) unsigned NOT NULL, |
+ PRIMARY KEY (`seq`) |
+) ENGINE=SEQUENCE DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_uca1400_ai_ci: Table 'seq_15_to_1_step_12345' already exists |
MTR testcase to repro issue: (Say example.test)
--source include/have_sequence.inc
|
--source include/have_innodb.inc
|
explain select * from seq_15_to_1_step_12345; |
How to repro
./mtr example.test --record |
./mtr example.test --replay-server |
Attachments
Issue Links
- relates to
-
MDEV-39368 Add mtr --replay-server option to test Optimizer Context Replay
-
- In Progress
-