MDEV-40388 Skip optimizer-context DDL for exists-by-name tables

With optimizer_record_context enabled, the optimizer trace records a
CREATE TABLE statement for every base table a query references, so an
Optimizer Context Replay server (MDEV-39368) can rebuild the query's
context. For SEQUENCE-engine helper tables (seq_<from>_to_<to>[_step_<step>])
this recorded a CREATE TABLE ... ENGINE=SEQUENCE that can never be
replayed: the SEQUENCE engine discovers such tables from their name alone
and ha_seq::create() rejects CREATE TABLE, so replay fails with
"Table '...' already exists".

Add a handlerton capability flag HTON_TABLE_EXISTS_BY_NAME that an engine
sets to declare that its tables are discovered from the table name alone
and cannot be created with an explicit CREATE TABLE. The SEQUENCE storage
engine sets it in init(). is_base_table() in opt_trace_ddl_info.cc skips
tables whose engine has the flag, so their DDL is not recorded. The flag
uses a previously unused bit and defaults to 0 (handlertons are
zero-filled), so no other engine is affected. PERFORMANCE_SCHEMA tables
remain excluded earlier by the table-category check.

Test main.opt_trace_store_ddls_sequence: a query over a sequence table
records no DDL, and a join of a regular table with a sequence table
records only the regular table's DDL.

All new code of the whole pull request, including one or several files
that are either new files or modified ones, are contributed under the
BSD-new license. I am contributing on behalf of my employer Amazon Web
Services, Inc.